fix: work with overflow

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 body {
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
